<resources>
    <string name="app_name">AgroNepal</string>
    <string name="agro_nepal">Agro Nepal</string>
    <string name="identify_plants">Identify Plants</string>
    <string name="news">News</string>
    <string name="title_activity_newspage">ScrollingActivity</string>
    <string name="large_text">
    </string>
    <string name="action_settings">Settings</string>
    <string name="cropfirst"> Rice </string>
    <string name="riceheading1">Introduction </string>
    <string name="riceheading2">Seed Selection </string>
    <string name="riceheading3">Land Preparation </string>
    <string name="riceheading4">Plantation Techniques </string>
    <string name="riceheading5">Fertilizer</string>
    <string name="riceheading6">Irrigation</string>
    <string name="riceheading7">Harvesting</string>
    <string name="riceheading8">Production</string>
    <string-array name="crop1">

        <item name="riceheading1">Introduction</item>
        <item name="riceheading2">Seed Selection</item>
        <item name="riceheading3">Land Preparation</item>
        <item name="riceheading4">Plantation Techniques</item>
        <item name="riceheading5">Fertilizer</item>
        <item name="riceheading6">Irrigation</item>
        <item name="riceheading7">Harvesting</item>
        <item name="riceheading8">Production</item>

    </string-array>
    <string name="wheatheading1">Introduction </string>
    <string name="wheatheading2">Climate</string>
    <string name="wheatheading3">Water Limitation</string>
    <string name="wheatheading4">Land Selection</string>
    <string name="wheatheading5">Breeds</string>
    <string name="wheatheading6">Land Preparation</string>
    <string name="wheatheading7"> Seed Reduirements</string>
    <string name="wheatheading8"> Fertilizers </string>
    <string name="wheatheading9">Plantation Time</string>
    <string name="wheatheading10">Irrigation</string>
    <string name="wheatheading11">Harvesting</string>
    <string name="wheat1">
        गहुँ (Triticum aestivum) बिश्वोमा सबैभन्दा धेरै उत्पदान हुने र नेपालको लागि धान र मकै पछीको महत्त्वपूर्ण अन्न बाली हो।
        गाउँ घरमा यस्को रोटी, ढिडो, हलुवा, पुरी बनायर सेवन गर्नेगरिन्छ भने सहर बजारमा यस्को  पाउरोटी, केक, बिस्कुट, चाउचाउ बनाउन प्रयोग गरिन्छ।गहुँको भुस र दानाहरु पनि गाई भैसिलाइ खुवाउन प्रयोग गरिन्छ।
        गहुँको उत्पति दक्षिण पश्चिम एसिया बाट भएको मानिन्छ।
    </string>
    <string name="wheat2">
        समुन्द्र सतह बाट ३३०० मिटरसम्म गहुँ लगाउन सकिन्छ। बीउ उम्रनको लागि २० देखि २५ डिग्री सेल्सियस तापक्रम उपयुक्त मानिन्छ भने पाक्नको लागि औसत तापक्रम १४ देखि १५ डिग्री सेल्सियस हुनु पर्दछ।
        फुल खेल्ने बेलामा  जिरो डिग्री भन्दा कम तापक्रम भयमा दाना लग्दैन र बाली पाक्ने बेलामा तापक्रम बढी भयमा (२५ डिग्री भन्दा माथी) छिटो दाना पाक्छ र उत्पादन घट्छ।
    </string>
    <string name="wheat3">
        बीउ छर्ने बित्तिकै पानी पर्यो भने बीउ राम्रो सँग उम्रन पाउँदैन।
        बढी पानी जम्मा हुने ठाउँ गहुँको लागि उपयुक्त हुँदैन।
        सामान्यतया धान र गहुँ खेतीको लागि १३००-१८०० मिलिमिटर पानी चाहिन्छ।
    </string>
    <string name="wheat4">
        पि.यच-५.५ देखि ७.५, दोमट माटो। पानी नजम्ने वा पानीको निकास राम्रो भएको ठाउँ।
    </string>
    <string name="wheat5">
        तराई: बि. यल.१४७३, बि. यल ११३५, भृकुटी , गौतम, आदित्य, बिजय।
        मध्य पहाड: डव्लु के १२०४, पासङ्गल्हामु, अन्नपूर्ण ३, अन्नपूर्ण ४।
        उच्च पहाड: डव्लु के १२०४, पासङ्गल्हामु, अन्नपूर्ण १, अन्नपूर्ण ३।
    </string>
    <string name="wheat6">
        २० देखि ३० सेन्टिमिटर गहिरो हुनेगरी जोत्ने।
        २-३ पटक जोतेर माटो मसिनो बनाउने र चिस्यान जोगाउनको लागि प्रत्येक जोताइ पछाडी पटाहा लगाउने।
    </string>
    <string name="wheat7">
        १२० केजी प्रती हेक्टर (६ केजी प्रती रोपनि)।
        मिश्रित बाली लगाउदा ४ केजी गहुँको बिउसंग दुई केजि केराउ वा २५० ग्राम तोरी प्रती रोपनी रोप्नुपर्छ।
    </string>
    <string name="wheat8">
        संचित क्षेत्रकोलागि १००:५०:५० र असंचित क्षेत्रकाेलागी ५०:५०:२० केजि नाईट्रोजन, फस्फोरस र पोटास सँगै १५ टन प्राङ्गारिक मल एक हेक्टरमा हाल्नुपर्छ।
        यो मात्रा पूरा गर्न एक कठ्ठामा संचित क्षेत्रकोलागि प्राङ्गारिक मल २० डोको(५०० केजी), युरिया ५.५ केजी, डियपी ३.२ केजी, म्युरेट अफ पोटास १.५ केजी र असंचित क्षेत्रकाेलागी युरिया २.२ केजी,
        डियपी ३.२ केजी, म्युरेट अफ पोटास १ केजी हाल्नु पर्छ।
    </string>
    <string name="wheat9">
        गहुँ छर्ने समयलाई अत्यन्तै ध्यान दिनु पर्छ।
        चाँडो छर्दा बालिको पाक्ने अवधी लामो हुने र उत्पादन राम्रो नहुन सक्छ।
        यदि ढिलो छरेमा वाली फुल्ने समयमा सुख्खा हावा चल्ने र माटोको चिस्यान कमी हुने भएकोले उत्पादनमा ठूलो ह्रास आउँछ।
        त्यसैले यो बलिलाई नेपालको हावापानी अनुसार कार्तिकको अन्तिम हप्ता देखि मंसिरको पहिलो हप्ता सम्म लगाउन उत्तम हुन्छ।
    </string>
    <string name="wheat10">
        मुकुट जरा(क्राउन रूट) आउने अबस्था, पसाउने अबस्था र दाना भरिने अबस्थाको सिचाई बढी महत्त्वपूर्ण हुन्छ।
        बिउँ छर्नु भन्दा ७/१० दिन अगाडि सिचाई  दिन सके बिउँको उमार शक्ति बढ्छ।
    </string>
    <string name="wheat11">
        गहुँको बालामुनिको डाठँ पहेलो भएपछि गहुँ पाकेको मानिन्छ।
        बाला हातमा माड्दा दाना राम्ररी छुट्यो भने गहुँ काट्न थाले हुन्छ।
        गहुँको दानालाई टोक्दा कुटुक्क हुन्छ भने काट्न सुरु गर्नुपर्छ।
        काटेपछी २-३ दिन सुकायर बाली चुट्नु पर्छ।
        \n
                 \nधन्यवाद !!!
    </string>
    <string name="mheading1">Introduction</string>
    <string name="mheading2">Land Preparation</string>
    <string name="mheading3">Fertilizer </string>
    <string name="mheading4">Seed</string>
    <string name="mheading5">Seed Treatment</string>
    <string name="mheading6">Plantation Time</string>
    <string name="mheading7">Plantation Technique</string>
    <string name="mheading8">Bugs Management</string>
    <string name="mheading9">Storage </string>
    <string name="mheading10">Production</string>
    <string name="m1">
        मनकामना–५ जातको मकै पहाडको लागि बिक्रम सम्बत २०६६ मा क्षेत्रीय
        कृषि अनुसन्धान केन्द्रबाट बिकास भई उन्मोचन भएको हो । यो पुष्ट दाना
        भएको सेतो मकै हो । यो मकै आटो खानको लागि अति उत्तम पाइएको छ ।
        १० बटा उत्कृष्ट इनब्रिड लाइनहरू आपसमा कुomस गराई यो जातको
        बिकास गरिएको हो ।
        सिफारिस क्षेत्र
        यो मकै कर्णाली नदी भन्दा पूर्वका पहाडी भागको लागि सिफारिस गरिएको
        हो ।
        पौष्टिक तत्व
        प्रोटिन ९५० चिल्लो पदार्थ ९५० कार्बोहाइड्रेट ९५० कच्चा रेसा ९५० खरानी
        ९५०९.७०-९.८५४.२३–४.७३६९.३९-६९.६५१.४०-१.६८१.३३-१.३७
        हावापानी तथा माटो
        मध्य पहाडको बिभिन्न हावापानीमा पनि लगाउन सकिन्छ । पानी नजम्ने
        मलिलो दोमट माटो यसको लागि उपयुक्त हुन्छ। गृष्म ऋतुमा यो जातको
        मकैले राम्रो उत्पादन दिन्छ ।
    </string>
    <string name="m2">
        मकैको बढि उत्पादन लिनको लागि राम्रोसँग खनजोत गरेर माटो बुर्बुराउँदो
        बनाउनुपर्छ । यसको लागी ३–४ पटक खनजोत गर्नुपर्छ । चिम्ट्याइलो
        माटोमा १–२ पटक बढि जोत्नुपर्छ । मकै लगाउने बेलामा माटोमा प्रसस्त
        चिस्यान हुनु पर्दछ । आजभोली बिना खनजोत मकै खेती गर्ने परिक्षणहरू
        भैरहेका छन् । जसमा बाँझो जग्गामा मकै जोतेर छापो हाल्दा बढि उत्पादन
        दिएको पाइएको छ ।
    </string>
    <string name="m3">
        जमिनको तयारी गर्दा ५०० देखि ७५० केजी गोबर वा कम्पोष्ट मल, ५ केजी
        युरिया, ६.५ केजी डि.ए.पी र २.५ केजी म्युरेट अफ पोटास एक रोपनी
        जग्ग्गामा हाल्नुपर्छ । त्यस्तै, पहिलो र दोश्रो गोडाइमा २.५ केजी प्रति
        रोपनीका दरले युरिया दिनुपर्छ ।

    </string>
    <string name="m4">
        सामान्य अबस्थामा बीउ दर १ केजी/रोपनी सिफारिस गरिएको छ तर फेद
        काट्ने किरा र गबारोको प्रकोप मनकामना ५ मकैको वोट मनकामना ५
        मकैको घोगा भएको ठाउँमा १.२५ केजी रोपनी सिफारिस गरिन्छ । बीउदर
        बीउको उमरक्ति र माटोको चिस्यानले पनि असर पार्छ । सुख्खा ठाउँमा केहि
        बढाउन सिफारिस गरिन्छ साथै उमारशक्ति ८५ प्रतिशत भन्दा बढि भएको र
        रोगकीरा नलागेको बीउ प्रयोग गर्नुपर्छ ।
    </string>
    <string name="m5">
        मकैमा कालोपोके लगायतका रोगहरू र घुनकीराले बढि नोक्सानी पु¥याउने
        हुँदा बीउ उपचार गर्नुपर्छ । पोकेको लागी भाइटाभेक्स २०० धुलो २ ग्राम प्रति
        केजी बीउका दरले उपचार गर्नुपर्छ । त्यस्तै बीउ भण्डारण गर्ने बेलामा कीराको
        लागि मालाथियन धुलो २ ग्राम प्रति केजी बीउका दरले उपचार गर्नपर्छ ।

    </string>
    <string name="m6">
        यो जातको मकै मध्यपहाडमा लगाईने हुँदा फाल्गुण १५ गतेदेखि चैत्र १५
        गतेभित्र रोप्दा बढि उत्पादन दिन्छ । बीउ उम्रन पानीको आबस्यकता पर्ने हुँदा
        जमिनका चिस्यान हुन जरुरी हुन्छ । एक दुईपटक बर्षा हुनासाथ चिस्यान
        भएको मौका छोपी मकै छरीहाल्नुपर्छ ।
        लगाउने तरिका
        मकै लगाउने बिभिन्न तरिकामध्य हलोको पछाडि रोप्ने र सिड ड्रिलको प्रयोग
        उपयुक्त पाइएका छन् । हलोको पछाडि रोप्दा एक सियो छोडेर एक
        बित्ताजती फरकमा बीउ खसाल्नुपर्छ र अन्तिममा एक रोपनीमा २५०० देखी
        २६५० बोट हुनेगरी राख्नपर्छ । सिड ड्रिलले रोप्दा एकपटकमा २ दाना पर्नेगरी
        लगाउने र पछि १ बोट मात्र राख्ने गर्नुपर्छ ।
    </string>
    <string name="m7">
        बीउभित्रको बिरुवा सुसुप्त अबस्थामा रहेको हुन्छ । यसलाई उम्रिन पानीको
        आबस्यकता पर्दछ । मकैको दानाले जमिनको पानी सोसेर लिन्छ । यसरी
        पानी सोसेपछि मकैको दानाभित्र रासाइनिक प्रतिकृया भई भृण उम्रन थाल्दछ
        | माटोमा रहेको पानी मकैको दानाले लिन गाह्रो हुने हुँदा जमिनमा रोप्दा
        पानी भरीन समय लाग्नछ र उम्रन केही समय लाग्दछ। साथै मकै रोप्दा
        बिभिन्न गहिराईमा पुग्ने र गहिराई अनुसार चिस्यान पनि फरक पर्ने हुँदा कुनै
        दाना छिटोर कुनै दाना ढिलो उम्रने हुन्छ । यसले गर्दा मकै पाक्ने समय पनि
        फरक पर्दछ । मकै एकनारको बनाउन र एकैचोटी पाक्ने बनाउन बीउ
        भिजाएर छर्न सकिन्छ ।
        यसको लागि मकैलाई १२ घण्टा पानिमा भिजाउने । दुई देखि ३ घण्टा
        छायाँमा सुकाउने र छर्ने । यसरी छायाँमा फिंजाउनको कारण छर्ने बेलामा
        दाना झार्न सजिलो बनाउनु मात्र हो । मकैलाई भिजाएर रोप्दा ३ देखि ५ दिन
        छिटो उम्रने तथा ५ देखि ७ दिन छिटो पाक्ने र बढी उम्रने तथ्य अनुसन्धानबाट
        खुल्न आएको छ। बीउ भिजाएर रोप्दा जमिनमा चिस्यान हुनु अनिबार्य हुन्छ ।
        यदि मकै छर्ने ठाउँ सुक्खा भएमा दानाबाट पानी बाहिर निस्कनेको कारणले
        उम्रिएको भ्रुण सुकेर मर्दछ र फलस्वरुप बोटको संख्या र उत्पादनमा कमी
        आउँदछ।
        गोडमेल
        मकैलाई रोपेको एक महिनामा झारपात हटाउन गोड्नुपर्छ । गोड्दा २.५ केजी
        प्रती रोपनिका दरले युरीया दिनुपर्छ । मकै धुंडासम्म आएपछि उकेरा दिनुपर्छ
        । उकोरा दिंदा पनि २.५ केजी युरीया बिरुवाको फेदमा राखेर उकेरा दिनुपर्छ
        |
    </string>
    <string name="m8">
        गहिरो जोतेर झारपात र ढोड नष्ट पार्ने साथै राम्रोसँग पाकेको मल प्रयोग गर्ने
        | फौजी कीराको प्रकोप भएमा २ मिलीलीटर डेसिस १ लिटर पानीमा हालेर
        छर्ने साथै गबारोको नियमित प्रकोप भएका ठाउँमा सेबिन ४.५ जी ६०० देखि
        ७०० ग्राम प्रति रोपनीका दरले बिउ छर्ने बेलामा छर्ने वा बिरुवामा प्रकोप
        देखिएमा गुबोमा २-३ दाना प्रति बोट हाल्नुपर्छ ।
        खुमेरा, फेद काट्ने र धागे कीराको लागि १-१.५ केजी क्लोरोपाइरिफस
        (डरमेट) २.५ जी प्रति रोपनीको दरले छर्ने । बीउदर बढाएर छर्दा बिषादिको
        प्रयोग कम गर्न सकिन्छ । बीउ मकै भण्डारण गर्दा राम्रोसँग सुकाएर
        (चिस्यान १२ % भन्दा कम) राख्ने वा मेटल बिनमा राखेर एक चक्की
        सेल्फस राखि हावा नछिर्ने गरी बन्द गर्ने ।
    </string>
    <string name="m9">
        मकैलाइ राम्रोसँग पाकेपछि भाँच्नुपर्छ । भाँचेपछि राम्रोसँग सुकाएर कुन्यु वा
        सुली बनाई राख्न सकिन्छ । दुई देखि तीन महिनापछि मकैलाई छोडाएर
        राम्रोसँग सुकाई मेटल बिन वा सुपर ग्रेन ब्यागमा राखि हवा नछिर्नेगरी
        भण्डारण गर्नुपर्छ। चिसो र ओसिलो ठाउँमा राख्न हुन्न । सुपर ग्रेन ब्यागलाई
        अर्को बोराले मोडेर आगोले नभेट्ने ठाउँमा राख्नुपर्दछ ।
    </string>
    <string name="m10">
        बिभिन्न ठाउँमा लिइएको क्रप कटको आधारमा मनकामना–५ को उत्पादन
        यसप्रकार छ ।
        क्र.सं. मकैकको जात बोटको उचाई बोट संख्या?]रोपनी उत्पादन श्रोत
        १ मनकामना–५ २७३.५ सेमी २३७५ २६५.७ केजी/रोपनी बा.न.पा.-१०, क्रप
        कट २०१३
        २ मनकामना–५ २२६.३३ २००० २३८ केजी[?]रोपनी क्षे.कृ.अ.के., लुम्ले,
        क: mप कट २०१३
        यो जातको मकैको उत्पादन क्षमता ३३० केजी प्रति रोपनी पाइएको छ ।
        \n
                            \nधन्यवाद !!!
    </string>
</resources>