<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".blog.Wheat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading1"
            android:textSize="32sp"
            android:background="#d1ebd4"
            android:textStyle="bold"/>


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat1"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading2"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat2"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading3"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat3"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading4"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat4"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading5"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat5"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading6"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat6"
            android:textSize="28sp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading7"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat7"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading8"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat8"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading9"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat9"
            android:textSize="28sp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading10"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat10"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheatheading11"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheat11"
            android:textSize="28sp"
            android:textStyle="normal"/>
    </LinearLayout>

</ScrollView>