<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".blog.Maize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading1"
            android:textSize="32sp"
            android:background="#d1ebd4"
            android:textStyle="bold"/>


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m1"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading2"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m2"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading3"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m3"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading4"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m4"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading5"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m5"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading6"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m6"
            android:textSize="28sp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading7"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m7"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading8"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m8"
            android:textSize="28sp"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading9"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m9"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mheading10"
            android:background="#d1ebd4"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m10"
            android:textSize="28sp"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="THANK YOU !!!"
            android:textSize="30sp"
            android:textStyle="italic">

        </TextView>

    </LinearLayout>

</ScrollView>