<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"


    tools:context=".Dashboard.Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amarante"
            android:padding="10dp"
            android:text="@string/agro_nepal"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="50sp">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="20dp"
                android:background="@color/cardview_dark_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amarante"
                    android:padding="14dp"
                    android:text="@string/identify_plants"
                    android:textAlignment="viewStart"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="38sp">

                </TextView>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="5dp">
                    //android:text="Open"


                </Button>

            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:src="@drawable/plant_identify"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:background="#00000000">
            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="20dp"
            android:background="#0c8ec9">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="170dp"
                android:background="@drawable/newspaper"
                android:layout_marginLeft="14dp">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textSize="40sp"
                android:padding="25dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/cardview_light_background"
                android:fontFamily="@font/amarante">

            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Open"
                android:background="#00000000"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true">

            </Button>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/purplesolid"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blogs"
                android:textSize="40sp"
                android:padding="20dp"
                android:textAlignment="viewStart"
                android:textColor="@color/cardview_light_background"
                android:fontFamily="@font/amarante">

            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Open"
                android:background="#00000000"
                android:padding="5dp"
                android:layout_alignParentBottom="true">

            </Button>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="140dp"
                android:background="@drawable/blogger"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true">


            </ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="20dp"
            android:background="@drawable/solidcolor">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="170dp"
                android:background="@drawable/information"
                android:layout_marginLeft="14dp">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Details"
                android:textSize="40sp"
                android:padding="25dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/cardview_light_background"
                android:fontFamily="@font/amarante">

            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Open"
                android:background="#00000000"
                android:padding="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

            </Button>
        </RelativeLayout>


    </LinearLayout>

</ScrollView>